# alpha-seeker

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
.claude/: launch.json  settings.local.json
.claude/commands/: alpha-seeker.md
.github/workflows/: daily-scoring.yml  deploy-pages.yml
config/: portfolio.json
deploy/opend/: README.md
docs/: scoring_methodology.md
output/: ic_history.json  ranking_20260321.csv  ranking_20260321.html  ranking_20260322.csv  ranking_20260322.html  ranking_20260323.csv  ranking_20260324.csv  ranking_20260325.csv  ranking_20260326.csv  ranking_20260327.csv  ranking_20260330.csv  ranking_20260331.csv  ranking_20260401.csv  ranking_20260402.csv  ranking_20260403.csv  ranking_20260407.csv  ranking_20260408.csv  ranking_20260409.csv  ranking_20260410.csv  ranking_20260413.csv  ranking_20260414.csv  ranking_20260415.csv  ranking_20260416.csv  ranking_20260417.csv  ranking_20260420.csv  ranking_20260421.csv  ranking_20260423.csv  ranking_20260424.csv  ranking_20260427.csv  ranking_20260428.csv  ranking_20260429.csv  ranking_20260501.csv  ranking_20260505.csv  ranking_20260506.csv  ranking_20260507.csv  ranking_20260508.csv  ranking_20260511.csv  ranking_20260512.csv  ranking_20260513.csv  ranking_20260520.csv  (+121 more)
tests/: test_backtest.py  test_client.py  test_explain.py  test_liquidity_overlay.py  test_order.py  test_portfolio.py  test_safety.py  test_scoring.py  test_signal.py  test_tool_regression.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  (+1 more)
(+111 files in other folders)
